# agent_bureau

./: CLAUDE.md  README.md  progress.md  pyproject.toml
.disagree/: agents.json  sessions.jsonl
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: tui-prompt-size-and-streaming-gibberish.md
.planning/phases/01-async-streaming-bridge/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-static-tui-layout/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  (+7 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
schemas/: agent_response.schema.json
spikes/: pty_agent_spike.py
src/agent_bureau.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/disagree_v1/: __init__.py  adapters.py  adjudication.py  classifier.py  cli.py  launch.py  launcher.py  models.py  orchestrator.py  presets.py  store.py
src/disagree_v1.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tui/: app.py  apply.py  bridge.py  content.py  event_bus.py  messages.py  session.py  styles.tcss
tests/: test_classifier.py  test_v1_flow.py
tests/tui/: test_agent_pane.py  test_app.py  test_apply.py  test_bridge.py  test_content.py  test_messages.py  test_modal_screens.py  test_quit_screen.py  test_reconciliation_panel.py  test_session.py
web/tic-tac-toe/: main.js
(+37 files in other folders)
