[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-bureau"
version = "0.1.0"
description = "Visible disagreement orchestrator v1"
requires-python = ">=3.10"
dependencies = ["textual>=0.80.0,<9"]

[project.scripts]
agent-bureau = "tui.app:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.25,<2.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
